--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,16 @@ body {
   margin: 0;
   padding: 0;
 }
+.background-image {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            background: url('assets/images/background_00.jpg') no-repeat center center;
+            background-size: cover;
+            z-index: -1;
+}
 
 header {
   background-color: #602ca8;
